--- a/Resources/css/style.css
+++ b/Resources/css/style.css
@@ -4,14 +4,24 @@ html{
   color: white;
 }
 
+.container{
+  max-width: 960px;
+  margin: 0 auto;
+  display: flex;
+}
+
 header{
   background-color: black;
   font-size: 1rem;
   display: flex;
+  width: 100%
 }
 
 .logo img{
   height: 1.5rem;
+  margin-right: 1rem;
+  margin-left: 0.5rem;
+
 }
 
 .banner{
@@ -20,32 +30,105 @@ header{
   background-repeat: no-repeat;
   background-size: cover;
   height: 25rem;
+
 }
 
-.banner span{
+.arrival{
   background-color: black;
+  width: 20rem;
+  opacity: 1;
+  display: block;
+  align-items: center;
+  color: white;
+  top: 50%;
+}
+
+.arrival h2{
+  font-size: 1rem;
+  font-weight: bold;
+  padding: 2rem 0rem .25rem 3rem;
+}
+
+.arrival h3{
   font-size: 2rem;
+  font-weight: bold;
+  padding-left: 3rem;
 }
 
 .navigation{
   background-color: firebrick;
-
+  width: 100%;
+  padding: 0.75rem 0rem;
+  margin: auto;
 }
 
-.Grid{
+
+nav ul {
   display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0.75rem 0;
+}
+
+//.navigation ul{
+  display: inline-flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0.75rem 0;
+}
+
+
+.Grid, .binfo{
+  display: flex;
+  justify-content: space-between;
+  margin-top: 3rem;
 }
 
 .product{
   border: 4px solid black;
   width: 30%;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  width: 30%;
+  justify-content: space-around;
+  margin: auto;
 }
 
 .product img{
   height: 9rem;
   padding: 2rem;
+  max-width: 8rem
+
 }
+
+.product h3{
+  background-color: black;
+  padding: 0.5rem 0rem;
+}
+
+.info{
+  width: 30%;
+}
+
+.info .title{
+  display: block;
+  padding: 1rem 2rem;
+  background-color: black;
+  color: white;
+}
+
+.info span{
+  color: black
+}
+
 
 footer{
   background-color: black;
+  height: 5rem;
+  text-align: left;
+  align-items: center;
+
+  padding: 5rem 0;
+  margin-top: 4rem;
 }
